Adaptations to macOS version of JDK